Seed input broken layout bugfix

--- a/src/desktop/src/ui/components/input/input.scss
+++ b/src/desktop/src/ui/components/input/input.scss
@@ -166,7 +166,7 @@
         border: 1px dashed var(--body-alt);
         font-size: 12px;
         line-height: 12px;
-        margin: 32px 0 0 -14px;
+        margin: 32px 0 0 0;
         padding: 24px 0;
         font-size: 14px;
         text-align: center;
